# swarm_sim_ws

./: .dockerignore  .gitignore  ARCHITECTURE_DIAGRAM.md  METRICS_BUG_ANALYSIS.md  METRICS_FIX_REPORT.md  QUICK_FIX_GUIDE.md  README.md  README_RU.md  fix_decision_core.py  fix_python_packages.sh  init_ws.ps1
docker/: .gitignore  Dockerfile  docker-compose.yml
docs/: EXPERIMENTS_WKR.md  SIMULATION_STAND_UML.md
docs/tables/wkr/: table_4_1_experiment_matrix.md  table_4_2_validity_summary.md  table_4_3_success_rate.md  table_4_4_mean_metrics.md  table_4_5_best_architecture_by_scenario.md
reports/: WORK_REPORT.md  WORK_REPORT_RU.md
scripts/: aggregate_and_analyze.py  analyze_experiments.py  analyze_final_csv.py  analyze_wkr_results.py  create_test_marl_checkpoint.py  diagnose_full_failures.py  export_wkr_tables.py  extract_final_metrics.py  inspect_marl_checkpoint.py  plot_final_results.py  plot_wkr_results.py  render_wkr_world.py  run_all_experiments.sh  run_wkr_experiments.py  setup_workspace.sh  train_wkr_marl.py  validate_results.py  visualize_results.py
src/swarm_core/: CMakeLists.txt  package.xml
src/swarm_core/config/: agents_params.yaml  architectures.yaml  experiment_profiles.yaml  scenarios.yaml  simulation_config.yaml
src/swarm_core/launch/: experiment_runner.launch.py  simulation.launch.py  simulation.launch.py.bak3
src/swarm_core/scripts/: logical_swarm_simulator.py
src/swarm_core/worlds/: experimental_polygon.world  wkr_test_field_light.world
src/swarm_decision/: CMakeLists.txt  package.xml  setup.py
src/swarm_decision/swarm_decision/: decision_core_node.py  marl_agent.py  task_allocator_node.py
src/swarm_msgs/: CMakeLists.txt  package.xml
src/swarm_msgs/msg/: AgentState.msg  DecisionOutput.msg  ExperimentMetrics.msg  SwarmState.msg  TaskAssignment.msg  Trajectory.msg
src/swarm_perception/: CMakeLists.txt  package.xml  setup.py
src/swarm_perception/swarm_perception/: perception_node.py  sensor_fusion_node.py
src/swarm_planning/: CMakeLists.txt  package.xml
src/swarm_planning/include/swarm_planning/: planner.h  utils.h
src/swarm_planning/swarm_planning/: connectivity_manager_node.cpp  trajectory_planner_node.cpp
src/swarm_utils/: CMakeLists.txt  package.xml  setup.py
src/swarm_utils/scripts/: batch_runner.py
src/swarm_utils/swarm_utils/: communication_emulator.py  experiment_logger.py  metrics_calculator.py  mission_supervisor.py  swarm_state_publisher.py
tests/: test_wkr_validation.py
